@@ -113,6 +113,8 @@ All (GUI):
   they exist in the paragraph style.
 - wxRTC: fixed IsPositionVisible to scroll a position into view correctly.
 - wxRTC: fixed a problem with paste resetting the content paragraph style.
+- wxRTC: style list box now copes with names duplicated across style types.
+  Also fixed wxRichTextStyleDefinition::GetStyleMergeWithBase similarly.
 - Fixed error in generic tree control CalculatePositions.
 - Added wxFD_FILE_MUST_EXIST to wxFileSelector function.
 - Added wxDataViewCtrl Get/SetValueByRow functions for forward compatibility
